Fix for non-square images popping out of container.

--- a/resources/assets/components/MediaUploader/media-uploader.scss
+++ b/resources/assets/components/MediaUploader/media-uploader.scss
@@ -15,6 +15,7 @@
     flex-direction: column;
     height: 100%;
     justify-content: center;
+    overflow: hidden;
     text-align: center;
     width: 100%;
 
@@ -26,6 +27,10 @@
       height: 50px;
       margin-bottom: 10px;
       width: 50px;
+    }
+
+    img {
+      max-height: 100%;
     }
   }
 
